--- a/app/src/main/res/layout/activity_bucher_liste.xml
+++ b/app/src/main/res/layout/activity_bucher_liste.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activities.Bucher_Liste"
-    android:background="@color/grown_back">
+    android:background="@color/black">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_bar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/dark_blue"
+        android:background="@color/black"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,25 +22,22 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment1buch"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="395dp"
-        android:layout_height="341dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:name="com.example.buchapp.ui.fragments.liste.HomeFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/space"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout="@layout/fragment_home" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView3"
-        android:name="com.example.buchapp.ui.fragments.liste.HomeFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment1buch"
-        tools:layout="@layout/fragment_home" />
+    <View
+        android:id="@+id/space"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
+        app:layout_constraintTop_toBottomOf="@+id/fragment1buch" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
