--- a/app/src/main/res/layout/activity_bucher_liste.xml
+++ b/app/src/main/res/layout/activity_bucher_liste.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.Bucher_Liste"
+    tools:context=".activities.Bucher_Liste"
     android:background="@color/black">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -22,7 +22,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment1buch"
-        android:name="com.example.buchapp.ui.fragments.liste.HomeFragment"
+        android:name="com.example.buchapp.fragments.liste.HomeFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/space"
